# The_resistive_matrix_tactile_module_is_based_on_STM32

./: .mxproject  CMakeLists.txt  chujue.ioc
Core/Inc/: stm32f1xx_it.h
Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
MDK-ARM/: .clangd  chujue.cbuild-idx.yml  chujue.cbuild-pack.yml  chujue.cproject.yml  chujue.csolution.yml  chujue.uvguix.ldpine  chujue.uvoptx  chujue.uvprojx  startup_stm32f103xb.lst
MDK-ARM/RTE/_chujue/: RTE_Components.h
MDK-ARM/chujue/: adc.crf  adc.d  chujue.axf  chujue.build_log.htm  chujue.hex  chujue.htm  chujue.lnp  chujue.map  chujue_chujue.dep  dma.d  gpio.crf  gpio.d  main.crf  main.d  startup_stm32f103xb.d  stm32f1xx_hal.crf  stm32f1xx_hal.d  stm32f1xx_hal_adc.crf  stm32f1xx_hal_adc.d  stm32f1xx_hal_adc_ex.crf  stm32f1xx_hal_adc_ex.d  stm32f1xx_hal_cortex.crf  stm32f1xx_hal_cortex.d  stm32f1xx_hal_dma.crf  stm32f1xx_hal_dma.d  stm32f1xx_hal_exti.crf  stm32f1xx_hal_exti.d  stm32f1xx_hal_flash.crf  stm32f1xx_hal_flash.d  stm32f1xx_hal_flash_ex.crf  stm32f1xx_hal_flash_ex.d  stm32f1xx_hal_gpio.crf  stm32f1xx_hal_gpio.d  stm32f1xx_hal_gpio_ex.crf  stm32f1xx_hal_gpio_ex.d  stm32f1xx_hal_msp.crf  stm32f1xx_hal_msp.d  stm32f1xx_hal_pwr.crf  stm32f1xx_hal_pwr.d  stm32f1xx_hal_rcc.crf  (+15 more)
MDK-ARM/tmp/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  roots.cmake
MDK-ARM/tmp/1/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
MDK-ARM/tmp/chujue+chujue/: CMakeLists.txt  components.cmake  groups.cmake  toolchain.cmake
MDK-ARM/tmp/chujue+chujue/src/chujue+chujue-stamp/: chujue+chujue-configure-.cmake  chujue+chujue-database-.cmake  chujue+chujue-source_dirinfo.txt
MDK-ARM/tmp/chujue+chujue/tmp/: chujue+chujue-cfgcmd.txt  chujue+chujue-mkdirs.cmake
python_panel/: matrix_viewer.py
